2015-06-22  Niibe Yutaka  <gniibe@fsij.org>

	* clk_gpio_init.c: New, adding ports E/F/G.
	* entry.c: Include clk_gpio.init.c if not HAVE_SYS_H.
	* example-led/sys.c: Include clk_gpio_init.c.
	* example-cdc/sys.c: Ditto.

	* board/board-stm32-primer2.h: New from Kaz Kojima.

2015-04-20  Niibe Yutaka  <gniibe@fsij.org>

	Merge cortex-m0-support branch.

	* example-led/sys.c (gpio_init): Support MCU_STM32F0.
	(reset): Support __ARM_ARCH_6M__.
	* example-led/sample.ld: Change for Cortex-M0.

	* example-fsm-55/*: New example for FSM-55.

	* entry.c (STM32_PPRE1, STM32_PLLSRC, STM32_FLASHBITS)
	(STM32_PLLCLKIN): Support MCU_STM32F0.
	(struct RCC, RCC_*): Support MCU_STM32F0.
	(struct SYSCFG) [MCU_STM32F0]: New.
	(struct GPIO, GPIO*): Support MCU_STM32F0.
	(clock_init, gpio_init): Support MCU_STM32F0.
	(hard_fault, vectors_in_ram, entry): Support Cortex-M0.

	* chopstx.c (chx_cpu_sched_lock, chx_cpu_sched_unlock)
	(sched, preempt, svc): Support Cortex-M0.

	* board/board-fsm-55.h: New.
	* board/board-stm32f0-discovery.h: New.

2015-04-17  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (CHX_PRIO_MAIN_INIT): New, removing CHX_PRIO_MAIN.
	(chopstx_main_init): New.
	(chx_init): Use CHX_PRIO_MAIN_INIT.

2015-04-08  Niibe Yutaka  <gniibe@fsij.org>

	* board/board-maple-mini.h: New from Aidan Thornton.

2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 0.04a.

2014-12-10  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.04.
	* doc/chopstx.texi (VERSION): 0.04.

	* board/*.h: Updated.

	* example-cdc/sys.c: Copied from example-led.

	* example-led/sys.c (clock_init, GPIO_USB): Follow the change of
	entry.c.
	(gpio_init): Use RCC_ENR_IOP_EN and RCC_RSTR_IOP_RST.
	(reset): Use ldr instead of mov.w and movt.

	* entry.c (GPIO_USB) [GPIO_USB_BASE]: Conditionally defined.

	* chopstx.c (preempt): Add ! for stm.
	(chx_exit): Make sure RETVAL is saved onto r8.
	(chopstx_usec_wait_var): Make sure USEC_P is saved onto r8.

2013-11-27  Niibe Yutaka  <gniibe@fsij.org>
